# automaton

./: Cargo.toml  README.md
src/: main.rs  neural_cellular.rs  rock_paper_scissor.rs
src/models/: forest.rs  gravitation.rs  mod.rs  neural_cellular.rs  rock_paper_scissor.rs
src/utils/: render.rs
